fix landscape view on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,23 @@ a {
     padding: 0px 6px;
   }
 }
+/* Apply styles when the device is in portrait mode */
+@media screen and (orientation: portrait) {
+  body {
+    /* Your portrait mode styles */
+  }
+}
+
+/* Apply styles when the device is in landscape mode */
+@media screen and (orientation: landscape) {
+  body {
+    max-width: 425px;
+  margin: auto;
+    
+  }
+}
+
+/* Apply additional styles for the entire app when in landscape mode */
+body.landscape-mode {
+  /* Add any common styles you want to apply in landscape mode */
+}
