--- a/src/containers/favoris/favoris.css
+++ b/src/containers/favoris/favoris.css
@@ -17,7 +17,7 @@
   -webkit-font-smoothing: antialiased; /* For smoother font rendering on WebKit/Blink browsers */
 }
 .favContainer{
-padding-top: 60px;
+padding-top: 5px;
 }
 .item-head {
   width: 100%;
